fixed view on iphone 6s by removing margins

--- a/mediaquery.css
+++ b/mediaquery.css
@@ -1,21 +1,21 @@
 @media screen and (max-width:768px) {
   body {
           width: 100%;
-          margin-left: 15px;
+          /*margin-left: 15px;*/
     }
 
   nav, header, footer, .sticky {
-          margin-right: 15px;
+          /*margin-right: 15px;*/
   }
 
   article {
           width: 100%;
-          margin: 10px 15px 0 0;
+          margin: 10px 0 0 0;
   }
 
   aside {
           width: 100%;
-          margin: 0 15px 0 0;
+          margin: 0 0 0 0;
   }
 
   .sticky {
